feat: add password breach check using Have I Been Pwned API
- Implemented SHA-1 hashing and prefix/suffix-based query mechanism.
- Integrated API call to check if a password appears in known data breaches.
- Added handling for API responses to extract breach count for specific password hashes.
- Included error handling for API connection issues or invalid input.
- Ensured support for secure password checking without exposing the original password.